# p2p_cc

./: .gitignore  README.md
nostr-channel/: broker.ts  package-lock.json  package.json  server.ts
nostr-channel/shared/: types.ts
p2_gateway/: main.py  requirements.txt
rs_p2_gateway/: Cargo.toml
rs_p2_gateway/src/: app.rs  broker.rs  config.rs  error.rs  keys.rs  lib.rs  main.rs  relay.rs
rs_p2_gateway/tests/: bridge_test.rs  keys_test.rs  nostr_test.rs
