[package]
name = "rs_p2_gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rs_p2_gateway"
path = "src/main.rs"

[dependencies]
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
nostr-relay-pool = "0.44.0"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-wsocket = "0.13"
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
url = "2"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
axum-test = "19"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
